# fortune

./: .dockerignore  .env.example  .gitignore  .prettierignore  ARCHITECTURE.md  Dockerfile  GETTING_STARTED.md  README.md  config.yaml  docker-compose.yml  env.example  eslint.config.js  mongo-init.js  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  start_dashboard.py  test.py  vitest.config.ts
.github/workflows/: ci.yml  deploy.yml
.husky/: pre-commit
docs/: claude-code-ui-spec.md  decision-tree.md  stagnant-exit-investigation.md
docs/analysis/: stagnant-exit-investigation.md
frontend/: .dockerignore  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  script.js  styles.css  tailwind.config.js  vite.config.ts
frontend/src/: App.jsx  App.tsx  index.css  main.tsx  styles.css
frontend/src/api/: client.ts  ws.ts
frontend/src/components/: ExportReportModal.tsx  Layout.tsx  MarketClock.tsx  PositionDrawer.tsx  SignalBadge.tsx  StatCard.tsx  Toasts.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: markets.ts
frontend/src/pages/: Admin.tsx  Analytics.tsx  Config.tsx  ConfigPage.css  ConfigPage.jsx  CreateAccount.tsx  CreateStrategyPage.css  CreateStrategyPage.jsx  Dashboard.tsx  ForgotPassword.tsx  HistoricalPage.css  HistoricalPage.jsx  History.tsx  LiveTradingPage.css  LiveTradingPage.jsx  Login.tsx  Profile.tsx  ResetPassword.tsx  SettingsPage.jsx  Signals.tsx  StrategiesPage.css  StrategiesPage.jsx  StrategyEditorPage.css  StrategyEditorPage.jsx  StrategyTabsPage.css  StrategyTabsPage.jsx  StrategyTestPage.css  StrategyTestPage.jsx
frontend/src/services/: api.js
migrations/: 001_initial_schema.sql  002_add_exit_thresholds.sql  003_add_stagnant_exit_config.sql  004_users.sql  005_invite_admin_flag.sql  006_auto_start_on_restart.sql  007_trade_currency.sql  008_remove_trade_currency.sql  009_fix_daily_snapshots_pk.sql  010_accountant_role.sql  011_fix_stale_entry_prices.sql  011_user_markets.sql  012_per_market_config.sql  013_position_currency.sql
src/: backtest_engine.py  controllers.py  data_feed.py  db.ts  execution.py  live_trading.py  live_trading_engine.py  main.py  main.ts  manager.py  migrate.ts  models.py  server-entry.ts  server.ts  stats.py  storage.py
src/analytics/: dashboard.ts  journal.ts  performance.ts  report.ts  reporter.ts  reset-day.ts
src/api/: fx.test.ts  fx.ts  marketdata.ts  trading212.ts
src/cache/: signals.test.ts  signals.ts
src/config/: index.ts
src/engine/: EngineService.ts  brain.ts  markets.test.ts  markets.ts  riskmanager.test.ts  riskmanager.ts  scheduler.ts
src/indicators/: bollinger.py
src/routes/: emergency.py  live_trading.py  market_hours.py  strategy_management.py
src/services/: email.ts  encryption.test.ts  encryption.ts
src/strategies/: base.py  bollinger_reversion.py  hedged_pair_trading.py  pair_trading.py  strategy_factory.py
src/strategy/: indicators.test.ts  indicators.ts  signals.test.ts  signals.ts
src/tools/: backfill-positions.ts  close-all-positions.ts  invite-admin.ts  list-instruments.ts
src/types/: user.ts
src/utils/: logger.py  market_data.py  market_data_utils.py
src/ws/: hub.ts
(+53 files in other folders)
